--- a/index.html
+++ b/index.html
@@ -60,17 +60,22 @@
                     <article>
                         <h3>スピーカー</h3>
                         <div class="speaker">
+                        <!--TODO:画像を受け取ったら更新する-->
                             <img src="images/speaker1.png" alt="" class="image"/>
                             <div class="inner">
-                                <h4>1人目: 未定</h4>
-                                <p>1人目のプロフィール</p>
+                                <h4>ひとりめさん</h4>
+                                <p>ひとりめさんのプロフィール</p>
+                                <p>ひとりめさんの出身地</p>
+                                <p>ひとりめさんの仕事内容</p>
                             </div>
                         </div>
                         <div class="speaker">
                             <img src="images/speaker2.png" alt="" class="image"/>
                             <div class="inner">
-                                <h4>2人目: 未定</h4>
-                                <p>2人目のプロフィール</p>
+                                <h4>ふたりめさん</h4>
+                                <p>ふたりめさんのプロフィール</p>
+                                <p>ふたりめさんの出身地</p>
+                                <p>ふたりめさんの仕事内容</p>
                             </div>
                         </div>
                     </article>
