--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                 </tr>
                                 <tr>
                                     <td>20:00〜20:45</td>
-                                    <td>実践Git（ふたりめさん）</td>
+                                    <td>現場で使える実践Git（ふたりめさん）</td>
                                 </tr>
                                 <tr>
                                     <td>20:45〜21:00</td>
